# chatgpt-in-slack

./: .gitignore  README.md  pyproject.toml
app/: requirements.txt
chatbot-in-slack/: samconfig.toml  template.yaml
