[tool.poetry]
name = "chatgpt-in-slack"
version = "0.1.0"
description = "This is a bot app to use chatgpt via slack."
authors = ["Yusuke Kondo <kondounagi@gmail.com>"]
readme = "README.md"
packages = [{include = "chatgpt_in_slack"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
